# mtga_data_bot

./: .env.example  .gitignore  README.md  bot.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cogs/: cog.py  commands.py  embedding.py  export.py  gameplay.py  modals.py  sessions.py  settings.py  storage.py  utils.py  views.py
data/: guild_settings.json
data/guilds/1515970497974632558/: challenge_2026_07.csv  ladder_2026_06.csv
services/: parser_service.py  storage.py
tests/: test_config.py  test_guild_settings.py  test_modal.py  test_sessions.py  test_storage.py  test_utils.py
utils/: guild_settings.py  parse_and_check.py
