[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtga-data-bot"
version = "0.1.0"
description = "Discord bot to collect MTGA metagame and ladder data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "PanoPepino" }
]

dependencies = [
  "discord.py>=2.3",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/PanoPepino/mtga_data_bot"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cogs*"]
exclude = ["collected_data*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests",
]